--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <!-- 在<head>标签前添加音频元素 -->
 <audio id="backgroundMusic" loop>
-  <source src="music/戚薇、李俊昊 - 你是对的人.mp3" type="audio/mpeg">
+  <source src="music/Ryan Gosling、Emma Stone - City Of Stars.mp3" type="audio/mpeg">
   您的浏览器不支持音频播放
 </audio>
 
